refactor apintrial dan create
